--- a/index.html
+++ b/index.html
@@ -54,7 +54,110 @@
               fará com que, em telas maiores que 1120px, os limites do container sejam percebidos devido a diferença de cor.
             Sendo assim, criar uma div para aplicar a classe container dentro da tag MAIN fará com que o conteúdo continue alinhado com os demais elementos na tela,
             mas a cor de fundo (background) não se limitará a 1120px -->
-        <div class="container">main</div>
+        <div class="container">
+          <h1>Galeria</h1>
+          <section class="gallery">
+            <figure class="card">
+              <img src="./assets/gallery-images/img1.jpg" alt="Imagem de um setup (notebook, fone de ouvido, câmeras, e outros equipamentos) com a decoração de uma luminária de led amarelo em formato de um raio.">
+
+              <figcaption class="card-details">
+                <h2>Workspace elétrica</h2>
+                <div class="tags">
+                  <span>TAG</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="card">
+              <img src="./assets/gallery-images/img2.jpg" alt="Imagem de um teclado e um mouse na cor preta com led azul, e ao fundo uma luz de tom avermelhado.">
+
+              <figcaption class="card-details">
+                <h2>Dark and red</h2>
+                <div class="tags">
+                  <span>TAG</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="card">
+              <img src="./assets/gallery-images/img3.jpg" alt="Imagem de um setup (um notebook, um fone de ouvido e dois monitores, sendo que um dos monitores está a esquerda da imagem em posição vertical).">
+
+              <figcaption class="card-details">
+                <h2>Organização e grids</h2>
+                <div class="tags">
+                  <span>TAG</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="card">
+              <img src="./assets/gallery-images/img4.jpg" alt="Imagem de um setup (notebook, teclado, 2 monitores e etc. Sendo que os monitores estão um sobre o outro, e o debaixo é maior que o de cima). Ao fundo temos uma parede em tons de verde e com decoração no formato de uma colmeia.">
+
+              <figcaption class="card-details">
+                <h2>Colmeia</h2>
+                <div class="tags">
+                  <span>TAG</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="card">
+              <img src="./assets/gallery-images/img5.jpg" alt="Imagem de uma mesa com um notebook, um celular, um fone de ouvido, um caderno, uma caneta e outros objetos encima dela.">
+
+              <figcaption class="card-details">
+                <h2>Setup de escritor</h2>
+                <div class="tags">
+                  <span>TAG</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="card">
+              <img src="./assets/gallery-images/img6.jpg" alt="Imagem de um setup minimalista (um teclado, um monitor com um papel de parede bem colorido, uma cadeira de escritório ergométrica, uma planta, um porta objetos e outros itens).">
+
+              <figcaption class="card-details">
+                <h2>Ergonomia e cores</h2>
+                <div class="tags">
+                  <span>TAG</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="card">
+              <img src="./assets/gallery-images/img7.jpg" alt="Imagem de um setup minimalista (encima de uma mesa está: um vaso de flor, um fone de ouvido, um celular, um monitor, um teclado, um mouse, um notebook e uma xícara de chá). E ao fundo uma parede com luzes vermelhas e azuis">
+
+              <figcaption class="card-details">
+                <h2>Show de luzes</h2>
+                <div class="tags">
+                  <span>TAG</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="card">
+              <img src="./assets/gallery-images/img8.jpg" alt="Imagem de um setup (computador, notebook, monitor) sobre uma mesa e com uma parede roxa ao fundo. Além disso, existe um gato, uma caneca e outros objetos sobre a mesa.">
+
+              <figcaption class="card-details">
+                <h2>Deep purple</h2>
+                <div class="tags">
+                  <span>TAG</span>
+                </div>
+              </figcaption>
+            </figure>
+
+            <figure class="card">
+              <img src="./assets/gallery-images/img9.jpg" alt="Imagem de varias telas, a frente estão duas telas menores (monitores) e ao fundo uma televisão grande.">
+
+              <figcaption class="card-details">
+                <h2>Multi-Screen</h2>
+                <div class="tags">
+                  <span>TAG</span>
+                </div>
+              </figcaption>
+            </figure>
+
+          </section>
+        </div>
       </main>
       <footer class="container">
         <p>© 2023 - Rocketseat Explorer</p>
