Added some animations with CSS

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </figcaption>
             </figure>
 
-            <figure class="card">
+            <figure class="card" style="--delay: 0.6s">
               <img src="./assets/gallery-images/img2.jpg" alt="Imagem de um teclado e um mouse na cor preta com led azul, e ao fundo uma luz de tom avermelhado.">
 
               <figcaption class="card-details">
@@ -79,7 +79,7 @@
               </figcaption>
             </figure>
 
-            <figure class="card">
+            <figure class="card" style="--delay: 0.8s">
               <img src="./assets/gallery-images/img3.jpg" alt="Imagem de um setup (um notebook, um fone de ouvido e dois monitores, sendo que um dos monitores está a esquerda da imagem em posição vertical).">
 
               <figcaption class="card-details">
@@ -90,7 +90,7 @@
               </figcaption>
             </figure>
 
-            <figure class="card">
+            <figure class="card" style="--delay: 1s">
               <img src="./assets/gallery-images/img4.jpg" alt="Imagem de um setup (notebook, teclado, 2 monitores e etc. Sendo que os monitores estão um sobre o outro, e o debaixo é maior que o de cima). Ao fundo temos uma parede em tons de verde e com decoração no formato de uma colmeia.">
 
               <figcaption class="card-details">
@@ -101,7 +101,7 @@
               </figcaption>
             </figure>
 
-            <figure class="card">
+            <figure class="card" style="--delay: 1.2s">
               <img src="./assets/gallery-images/img5.jpg" alt="Imagem de uma mesa com um notebook, um celular, um fone de ouvido, um caderno, uma caneta e outros objetos encima dela.">
 
               <figcaption class="card-details">
@@ -112,7 +112,7 @@
               </figcaption>
             </figure>
 
-            <figure class="card">
+            <figure class="card" style="--delay: 1.4s">
               <img src="./assets/gallery-images/img6.jpg" alt="Imagem de um setup minimalista (um teclado, um monitor com um papel de parede bem colorido, uma cadeira de escritório ergométrica, uma planta, um porta objetos e outros itens).">
 
               <figcaption class="card-details">
@@ -123,7 +123,7 @@
               </figcaption>
             </figure>
 
-            <figure class="card">
+            <figure class="card" style="--delay: 1.6s">
               <img src="./assets/gallery-images/img7.jpg" alt="Imagem de um setup minimalista (encima de uma mesa está: um vaso de flor, um fone de ouvido, um celular, um monitor, um teclado, um mouse, um notebook e uma xícara de chá). E ao fundo uma parede com luzes vermelhas e azuis">
 
               <figcaption class="card-details">
@@ -134,7 +134,7 @@
               </figcaption>
             </figure>
 
-            <figure class="card">
+            <figure class="card" style="--delay: 1.8s">
               <img src="./assets/gallery-images/img8.jpg" alt="Imagem de um setup (computador, notebook, monitor) sobre uma mesa e com uma parede roxa ao fundo. Além disso, existe um gato, uma caneca e outros objetos sobre a mesa.">
 
               <figcaption class="card-details">
@@ -145,7 +145,7 @@
               </figcaption>
             </figure>
 
-            <figure class="card">
+            <figure class="card" style="--delay: 2s">
               <img src="./assets/gallery-images/img9.jpg" alt="Imagem de varias telas, a frente estão duas telas menores (monitores) e ao fundo uma televisão grande.">
 
               <figcaption class="card-details">
